
Note: over its 35+ year history, cdecl has never had good version numbering.
For changes in a particular version where the version number is unknown, the
version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 16.1

** `explicit-ecsu` in English
The value of the `explicit-ecsu` option now also applies in pseudo-English.
Previously:

    c++decl> class C
    c++decl> explain C *p
    declare p as pointer to C

Now (with `explicit-ecsu` containing `c`):

    c++decl> class C
    c++decl> set explicit-ecsu = csu
    c++decl> explain C *p
    declare p as pointer to class C

** Leading/trailing whitespace stringification
Previously:

    #define Q2(A,B,C)  #B
    expand Q2(, a b ,)

incorrectly returned `" a b "` whereas now it correctly returns `"a b"`.


* Changes in Cdecl 16.0

** Macro expansion
Cdecl now allows you to `#define` macros and `expand` them step-by-step.

** C99 with extension error messages
Improved C99 with extension error messages.

** `--disable-cdecl-debug` removed
The `--disable-cdecl-debug` `configure` option has been removed (which means
**cdecl** debug output is always compiled in).

** `GCC_COLORS`
Support for `GCC_COLORS` has been removed. It was more of a hindrance than a
help.

** Implicit `int` pointers in C++
Implicit `int` pointer declarations, e.g., `*p`, are now correctly illegal in
C++.

** `--infer-command`, `-I`
The former `--explain` and `-e` options have been renamed `--infer-command` and
`-I`; the former `explain-by-default` `set` option has been renamed `infer-
command`.

** Fixed issue #32: Invalid function declarator accepted as valid
A declarator like "int f()()()" was incorrectly accepted as valid -- fixed.

** Fixed `infer-command` comment syntax error
When in `infer-command` mode, a line starting with a comment would cause a
syntax error. Fixed.
